--- a/index.html
+++ b/index.html
@@ -1644,7 +1644,7 @@ const INCOME_CATEGORIES = [
 const EXPENSE_CATEGORIES = [
     'Pandal & Decorations', 'Idol & Materials', 'Priest & Rituals',
     'Electricity & Sound', 'Cooking and Materials', 'Food & Prasad', 'Cultural Program',
-    'Printing & Publicity', 'Transportation', 'Miscellaneous', 'Bene Hat|Kapor Hat|Handi Hat|Kansha Hat', 'Awards & others', 'Club Construction'
+    'Printing & Publicity', 'Transportation', 'Miscellaneous', 'Puja Hat & Materials', 'Awards & others', 'Club Construction'
 ];
 
 const BUDGET_ITEMS = {
@@ -1658,7 +1658,7 @@ const BUDGET_ITEMS = {
     'Printing & Publicity': 20000,
     'Transportation': 7000,
     'Miscellaneous': 12000,
-    'Bene Hat|Kapor Hat|Handi Hat|Kansha Hat': 35000,
+    'Puja Hat & Materials': 35000,
     'Awards & others': 10000,
     'Club Construction': 80000
 };
