--- a/index.html
+++ b/index.html
@@ -1644,7 +1644,7 @@ const INCOME_CATEGORIES = [
 const EXPENSE_CATEGORIES = [
     'Pandal & Decorations', 'Idol & Materials', 'Priest & Rituals',
     'Electricity & Sound', 'Cooking and Materials', 'Food & Prasad', 'Cultural Program',
-    'Printing & Publicity', 'Transportation', 'Miscellaneous', 'Puja Hat & Materials', 'Awards & others', 'Club Construction'
+    'Printing & Publicity', 'Transportation', 'Miscellaneous', 'Puja Hat & Materials', 'Awards & others', 'Club Construction', 'Dhaki & Napit'
 ];
 
 const BUDGET_ITEMS = {
@@ -1660,7 +1660,8 @@ const BUDGET_ITEMS = {
     'Miscellaneous': 12000,
     'Puja Hat & Materials': 35000,
     'Awards & others': 10000,
-    'Club Construction': 80000
+    'Club Construction': 80000,
+    'Dhaki & Napit': 12000
 };
 
 /* ---------------- Global Year Selection System ---------------- */
